<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpendingHistoryScreen"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/homePageHeaderLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/lightBrown">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/header_text"
            android:textColor="#764640"
            android:textSize="35dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/spendingHistoryHeader"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/homePageHeaderLayout"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:id="@+id/spendingHistoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/spending_history_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/startDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spendingHistoryHeader"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/starting_date_text" />

    <RelativeLayout
        android:id="@+id/topInputDateHeader"
        android:layout_marginTop="45dp"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_height="40dp"
        android:layout_below="@+id/spendingHistoryHeader"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:id="@+id/topInputDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:hint="@string/spending_history_input_hint"
            android:textSize="20dp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/endDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topInputDateHeader"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/ending_date_text" />

    <RelativeLayout
        android:id="@+id/bottomInputDateHeader"
        android:layout_marginHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/endDateText"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:id="@+id/bottomInputDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textColor="@color/black"
            android:hint="@string/spending_history_input_hint"
            android:textSize="20dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/expensesWithinTimeRange"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/bottomInputDateHeader"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:id="@+id/expensesWithinTimeRangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/expenses_range_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/expensesWithinTimeRangeCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expensesWithinTimeRangeText"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/zero_dollars"
            android:textColor="@color/black"
            android:textSize="33dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/mostExpensive"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/expensesWithinTimeRange"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:layout_centerHorizontal="true"
            android:id="@+id/mostExpensiveText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/most_expensive_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mostExpensiveCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mostExpensiveText"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:text="@string/zero_dollars"
            android:textColor="@color/black"
            android:textSize="33dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/avgDailySpending"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@+id/mostExpensive"
        android:background="@drawable/rounded_text_holder_sand">

        <TextView
            android:id="@+id/avgDailySpendingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/avg_daily_text"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/avgDailySpendingCash"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/avgDailySpendingText"
            android:text="@string/zero_dollars"
            android:textColor="@color/black"
            android:textSize="33dp"
            android:textStyle="bold" />

    </RelativeLayout>
    <Button
        android:text="@string/transactions_time_frame_button"
        android:id="@+id/saveButtonTimeFrame"
        android:enabled="false"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/avgDailySpending"
        android:background="@drawable/rounded_text_holder_brown">
    </Button>
    <RelativeLayout
        android:id="@+id/homePageFooterLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/lightBrown">

        <Button
            android:id="@+id/btnHomeButtonTimeFrameScreen"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:background="@drawable/img_3"
            android:backgroundTint="@color/black" />

    </RelativeLayout>


</RelativeLayout>